Bug 345641 - User lists or Friend lists don't load (either at startup or manually)
Summary: User lists or Friend lists don't load (either at startup or manually)
Status: RESOLVED FIXED
Alias: None
Product: choqok
Classification: Unmaintained
Component: Twitter (other bugs)
Version First Reported In: 1.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Mehrdad Momeny
URL: http://oi60.tinypic.com/2435ly9.jpg
Keywords:
: 336429 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-03-29 10:08 UTC by Ewen
Modified: 2015-04-04 19:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ewen 2015-03-29 10:08:26 UTC
It is possible to add, load and refresh my own lists.
But for other users' lists, I can only add them. There is no loading or refreshing possible.

Reproducible: Always

Steps to Reproduce:
1. Open Choqok.
2. Add a User List that is not yours (More → Add User List).
3. Try to refresh it.

Actual Results:  
The timeline remains empty.

Expected Results:  
There should be some tweets, right?
Comment 1 Andrea Scarpino 2015-04-02 21:00:54 UTC
Git commit 501e15603bda4c4611aa156362899a78ccc71565 by Andrea Scarpino.
Committed on 02/04/2015 at 20:59.
Pushed by scarpino into branch 'master'.

Fix Twitter lists showing an empty timeline

M  +5    -6    helperlibs/twitterapihelper/twitterapimicroblog.cpp

http://commits.kde.org/choqok/501e15603bda4c4611aa156362899a78ccc71565
Comment 2 Andrea Scarpino 2015-04-02 21:26:00 UTC
*** Bug 336429 has been marked as a duplicate of this bug. ***