Fix Twitter lists showing an empty timeline

BUG: 345641